@@ -4905,39 +4905,6 @@ argument_list|()
 return|;
 block|}
 case|case
-name|DELETESNAPSHOT
-case|:
-block|{
-name|np
-operator|.
-name|deleteSnapshot
-argument_list|(
-name|fullpath
-argument_list|,
-name|snapshotName
-operator|.
-name|getValue
-argument_list|()
-argument_list|)
-expr_stmt|;
-return|return
-name|Response
-operator|.
-name|ok
-argument_list|()
-operator|.
-name|type
-argument_list|(
-name|MediaType
-operator|.
-name|APPLICATION_OCTET_STREAM
-argument_list|)
-operator|.
-name|build
-argument_list|()
-return|;
-block|}
-case|case
 name|RENAMESNAPSHOT
 case|:
 block|{
@@ -7219,7 +7186,7 @@ name|MediaType
 operator|.
 name|APPLICATION_JSON
 argument_list|)
-DECL|method|deleteRoot ( @ontext final UserGroupInformation ugi, @QueryParam(DelegationParam.NAME) @DefaultValue(DelegationParam.DEFAULT) final DelegationParam delegation, @QueryParam(UserParam.NAME) @DefaultValue(UserParam.DEFAULT) final UserParam username, @QueryParam(DoAsParam.NAME) @DefaultValue(DoAsParam.DEFAULT) final DoAsParam doAsUser, @QueryParam(DeleteOpParam.NAME) @DefaultValue(DeleteOpParam.DEFAULT) final DeleteOpParam op, @QueryParam(RecursiveParam.NAME) @DefaultValue(RecursiveParam.DEFAULT) final RecursiveParam recursive )
+DECL|method|deleteRoot ( @ontext final UserGroupInformation ugi, @QueryParam(DelegationParam.NAME) @DefaultValue(DelegationParam.DEFAULT) final DelegationParam delegation, @QueryParam(UserParam.NAME) @DefaultValue(UserParam.DEFAULT) final UserParam username, @QueryParam(DoAsParam.NAME) @DefaultValue(DoAsParam.DEFAULT) final DoAsParam doAsUser, @QueryParam(DeleteOpParam.NAME) @DefaultValue(DeleteOpParam.DEFAULT) final DeleteOpParam op, @QueryParam(RecursiveParam.NAME) @DefaultValue(RecursiveParam.DEFAULT) final RecursiveParam recursive, @QueryParam(SnapshotNameParam.NAME) @DefaultValue(SnapshotNameParam.DEFAULT) final SnapshotNameParam snapshotName )
 specifier|public
 name|Response
 name|deleteRoot
@@ -7319,6 +7286,24 @@ argument_list|)
 specifier|final
 name|RecursiveParam
 name|recursive
+parameter_list|,
+annotation|@
+name|QueryParam
+argument_list|(
+name|SnapshotNameParam
+operator|.
+name|NAME
+argument_list|)
+annotation|@
+name|DefaultValue
+argument_list|(
+name|SnapshotNameParam
+operator|.
+name|DEFAULT
+argument_list|)
+specifier|final
+name|SnapshotNameParam
+name|snapshotName
 parameter_list|)
 throws|throws
 name|IOException
@@ -7341,6 +7326,8 @@ argument_list|,
 name|op
 argument_list|,
 name|recursive
+argument_list|,
+name|snapshotName
 argument_list|)
 return|;
 block|}
@@ -7365,7 +7352,7 @@ name|MediaType
 operator|.
 name|APPLICATION_JSON
 argument_list|)
-DECL|method|delete ( @ontext final UserGroupInformation ugi, @QueryParam(DelegationParam.NAME) @DefaultValue(DelegationParam.DEFAULT) final DelegationParam delegation, @QueryParam(UserParam.NAME) @DefaultValue(UserParam.DEFAULT) final UserParam username, @QueryParam(DoAsParam.NAME) @DefaultValue(DoAsParam.DEFAULT) final DoAsParam doAsUser, @PathParam(UriFsPathParam.NAME) final UriFsPathParam path, @QueryParam(DeleteOpParam.NAME) @DefaultValue(DeleteOpParam.DEFAULT) final DeleteOpParam op, @QueryParam(RecursiveParam.NAME) @DefaultValue(RecursiveParam.DEFAULT) final RecursiveParam recursive )
+DECL|method|delete ( @ontext final UserGroupInformation ugi, @QueryParam(DelegationParam.NAME) @DefaultValue(DelegationParam.DEFAULT) final DelegationParam delegation, @QueryParam(UserParam.NAME) @DefaultValue(UserParam.DEFAULT) final UserParam username, @QueryParam(DoAsParam.NAME) @DefaultValue(DoAsParam.DEFAULT) final DoAsParam doAsUser, @PathParam(UriFsPathParam.NAME) final UriFsPathParam path, @QueryParam(DeleteOpParam.NAME) @DefaultValue(DeleteOpParam.DEFAULT) final DeleteOpParam op, @QueryParam(RecursiveParam.NAME) @DefaultValue(RecursiveParam.DEFAULT) final RecursiveParam recursive, @QueryParam(SnapshotNameParam.NAME) @DefaultValue(SnapshotNameParam.DEFAULT) final SnapshotNameParam snapshotName )
 specifier|public
 name|Response
 name|delete
@@ -7476,6 +7463,24 @@ argument_list|)
 specifier|final
 name|RecursiveParam
 name|recursive
+parameter_list|,
+annotation|@
+name|QueryParam
+argument_list|(
+name|SnapshotNameParam
+operator|.
+name|NAME
+argument_list|)
+annotation|@
+name|DefaultValue
+argument_list|(
+name|SnapshotNameParam
+operator|.
+name|DEFAULT
+argument_list|)
+specifier|final
+name|SnapshotNameParam
+name|snapshotName
 parameter_list|)
 throws|throws
 name|IOException
@@ -7497,6 +7502,8 @@ argument_list|,
 name|op
 argument_list|,
 name|recursive
+argument_list|,
+name|snapshotName
 argument_list|)
 expr_stmt|;
 return|return
@@ -7541,6 +7548,8 @@ argument_list|,
 name|op
 argument_list|,
 name|recursive
+argument_list|,
+name|snapshotName
 argument_list|)
 return|;
 block|}
@@ -7555,7 +7564,7 @@ block|}
 argument_list|)
 return|;
 block|}
-DECL|method|delete ( final UserGroupInformation ugi, final DelegationParam delegation, final UserParam username, final DoAsParam doAsUser, final String fullpath, final DeleteOpParam op, final RecursiveParam recursive )
+DECL|method|delete ( final UserGroupInformation ugi, final DelegationParam delegation, final UserParam username, final DoAsParam doAsUser, final String fullpath, final DeleteOpParam op, final RecursiveParam recursive, final SnapshotNameParam snapshotName )
 specifier|private
 name|Response
 name|delete
@@ -7587,6 +7596,10 @@ parameter_list|,
 specifier|final
 name|RecursiveParam
 name|recursive
+parameter_list|,
+specifier|final
+name|SnapshotNameParam
+name|snapshotName
 parameter_list|)
 throws|throws
 name|IOException
@@ -7605,6 +7618,15 @@ argument_list|(
 literal|"name.node"
 argument_list|)
 decl_stmt|;
+specifier|final
+name|NamenodeProtocols
+name|np
+init|=
+name|getRPCServer
+argument_list|(
+name|namenode
+argument_list|)
+decl_stmt|;
 switch|switch
 condition|(
 name|op
@@ -7621,10 +7643,7 @@ specifier|final
 name|boolean
 name|b
 init|=
-name|getRPCServer
-argument_list|(
-name|namenode
-argument_list|)
+name|np
 operator|.
 name|delete
 argument_list|(
@@ -7662,6 +7681,39 @@ argument_list|(
 name|MediaType
 operator|.
 name|APPLICATION_JSON
+argument_list|)
+operator|.
+name|build
+argument_list|()
+return|;
+block|}
+case|case
+name|DELETESNAPSHOT
+case|:
+block|{
+name|np
+operator|.
+name|deleteSnapshot
+argument_list|(
+name|fullpath
+argument_list|,
+name|snapshotName
+operator|.
+name|getValue
+argument_list|()
+argument_list|)
+expr_stmt|;
+return|return
+name|Response
+operator|.
+name|ok
+argument_list|()
+operator|.
+name|type
+argument_list|(
+name|MediaType
+operator|.
+name|APPLICATION_OCTET_STREAM
 argument_list|)
 operator|.
 name|build
