@@ -66,10 +66,18 @@ operator|.
 name|HTTP_OK
 parameter_list|)
 operator|,
-DECL|enumConstant|NULL
-constructor|NULL(HttpURLConnection.HTTP_NOT_IMPLEMENTED
+DECL|enumConstant|DELETESNAPSHOT
+constructor|DELETESNAPSHOT(HttpURLConnection.HTTP_OK
 block|)
-enum|;
+enum|,
+DECL|enumConstant|NULL
+name|NULL
+parameter_list|(
+name|HttpURLConnection
+operator|.
+name|HTTP_NOT_IMPLEMENTED
+parameter_list|)
+constructor_decl|;
 DECL|field|expectedHttpResponseCode
 specifier|final
 name|int
