@@ -578,6 +578,8 @@ Release 2.5.0 - UNRELEASED
     HDFS-6433. Replace BytesMoved class with AtomicLong.
     (Benoy Antony via cnauroth)
 
+    HDFS-6438. DeleteSnapshot should be a DELETE request in WebHdfs. (jing9)
+
 Release 2.4.1 - UNRELEASED
 
   INCOMPATIBLE CHANGES
